; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_qlnxr_alloc_frmr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_qlnxr_alloc_frmr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_mr = type { i32 }
%struct.ib_pd = type { i32 }
%struct.qlnxr_dev = type { i32* }
%struct.qlnxr_mr = type { %struct.ib_mr }

@.str = private unnamed_addr constant [7 x i8] c"enter\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"exit %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ib_mr* @qlnxr_alloc_frmr(%struct.ib_pd* %0, i32 %1) #0 {
  %3 = alloca %struct.ib_pd*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.qlnxr_dev*, align 8
  %6 = alloca %struct.qlnxr_mr*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.ib_mr*, align 8
  store %struct.ib_pd* %0, %struct.ib_pd** %3, align 8
  store i32 %1, i32* %4, align 4
  store %struct.ib_mr* null, %struct.ib_mr** %8, align 8
  %9 = load %struct.ib_pd*, %struct.ib_pd** %3, align 8
  %10 = getelementptr inbounds %struct.ib_pd, %struct.ib_pd* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.qlnxr_dev* @get_qlnxr_dev(i32 %11)
  store %struct.qlnxr_dev* %12, %struct.qlnxr_dev** %5, align 8
  %13 = load %struct.qlnxr_dev*, %struct.qlnxr_dev** %5, align 8
  %14 = getelementptr inbounds %struct.qlnxr_dev, %struct.qlnxr_dev* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 (i32*, i8*, ...) @QL_DPRINT12(i32* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.ib_pd*, %struct.ib_pd** %3, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call %struct.qlnxr_mr* @__qlnxr_alloc_mr(%struct.ib_pd* %18, i32 %19)
  store %struct.qlnxr_mr* %20, %struct.qlnxr_mr** %6, align 8
  %21 = load %struct.qlnxr_mr*, %struct.qlnxr_mr** %6, align 8
  %22 = call i64 @IS_ERR(%struct.qlnxr_mr* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %2
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  %27 = call %struct.ib_mr* @ERR_PTR(i32 %26)
  store %struct.ib_mr* %27, %struct.ib_mr** %8, align 8
  br label %31

28:                                               ; preds = %2
  %29 = load %struct.qlnxr_mr*, %struct.qlnxr_mr** %6, align 8
  %30 = getelementptr inbounds %struct.qlnxr_mr, %struct.qlnxr_mr* %29, i32 0, i32 0
  store %struct.ib_mr* %30, %struct.ib_mr** %8, align 8
  br label %31

31:                                               ; preds = %28, %24
  %32 = load i32*, i32** %7, align 8
  %33 = load %struct.ib_mr*, %struct.ib_mr** %8, align 8
  %34 = call i32 (i32*, i8*, ...) @QL_DPRINT12(i32* %32, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), %struct.ib_mr* %33)
  %35 = load %struct.ib_mr*, %struct.ib_mr** %8, align 8
  ret %struct.ib_mr* %35
}

declare dso_local %struct.qlnxr_dev* @get_qlnxr_dev(i32) #1

declare dso_local i32 @QL_DPRINT12(i32*, i8*, ...) #1

declare dso_local %struct.qlnxr_mr* @__qlnxr_alloc_mr(%struct.ib_pd*, i32) #1

declare dso_local i64 @IS_ERR(%struct.qlnxr_mr*) #1

declare dso_local %struct.ib_mr* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
